<resources>
    <string name="app_name">System Air Care</string>

    <string name="title_room_1">Living Room</string>
    <string name="title_room_2">Room 1</string>
    <string name="title_room_3">Room 2</string>

    <string name="title_sensor1">PM 2.5</string>
    <string name="title_sensor2">VOC</string>
    <string name="title_sensor3">Temp</string>


    <string name="title_powerbutton_on">O N</string>
    <string name="title_powerbutton_off">OFF</string>
    <string name="title_autobutton">AUTO</string>
</resources>
