<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:weightSum="1"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:id="@+id/room2_title"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@color/app_color_8">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center_vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_weight="0.6">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_room_2"
                android:id="@+id/textView6"
                android:textSize="14dp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="#FFFFFF" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="(Air Care)"
                android:id="@+id/textView12"
                android:textSize="13dp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.4">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/iscon_room2"
                android:textAlignment="center"
                android:gravity="center_vertical"
                android:background="#00ffffff"
                android:src="@drawable/disconnect"
                android:layout_gravity="center" />
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.2"
        android:weightSum="1"
        android:layout_margin="7dp">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_room2_power"
            android:background="@drawable/custom_button_off"
            android:layout_weight="0.50"
            android:layout_gravity="center|left"
            android:gravity="center"
            android:text="@string/title_powerbutton_off"
            android:textColor="#b52774"
            android:layout_margin="5dp"
            android:textSize="12dp" />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_room2_toggle"
            android:background="@drawable/custom_button_off"
            android:checked="false"
            android:layout_weight="0.50"
            android:layout_gravity="center|right"
            android:gravity="center"
            android:textOff="@string/title_autobutton"
            android:textOn="@string/title_autobutton"
            android:layout_margin="5dp"
            android:textColor="#b52774"
            android:textSize="12dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sensor_border"
        android:layout_weight="0.3"
        android:layout_margin="10dp">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="0.25"
            android:weightSum="1"
            android:gravity="center"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/title_sensor2"
                android:id="@+id/textView8"
                android:layout_gravity="center"
                android:layout_weight="0.3"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="@color/app_color_1"
                android:layout_marginTop="3dp"
                android:textSize="12dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:weightSum="1" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="0"
                    android:id="@+id/room2_sensor2"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:layout_weight="0.7"
                    android:gravity="center"
                    android:textSize="13dp"
                    android:textStyle="bold"
                    android:textColor="@color/app_color_font"
                    android:layout_marginBottom="3dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="ppb"
                    android:id="@+id/textView14"
                    android:textSize="10dp"
                    android:layout_weight="0.3"
                    android:textColor="#000000"
                    android:gravity="center_vertical|center_horizontal|left" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="0.25"
            android:weightSum="1"
            android:gravity="center"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/title_sensor3"
                android:id="@+id/textView10"
                android:textAlignment="center"
                android:layout_weight="0.3"
                android:gravity="center_vertical"
                android:textColor="@color/app_color_1"
                android:layout_marginTop="3dp"
                android:textSize="12dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:weightSum="1" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="0"
                    android:id="@+id/room2_sensor3"
                    android:textAlignment="center"
                    android:layout_weight="0.7"
                    android:gravity="center"
                    android:textSize="13dp"
                    android:textStyle="bold"
                    android:textColor="@color/app_color_font"
                    android:layout_marginBottom="3dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="ºC"
                    android:id="@+id/textView15"
                    android:textSize="10dp"
                    android:layout_weight="0.3"
                    android:textColor="#000000"
                    android:gravity="center_vertical|center_horizontal|left" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>